crates/clx/src/dashboard/ui/snapshots/clx__dashboard__ui__tests__wave1_pixel__h2_status_load_error_red.snap
---
source: crates/clx/src/dashboard/ui/mod.rs
expression: rendered
---
┌ CLX Dashboard ───────────────────────────────────────────────────────────────┐
│ Sessions • Audit Log • Rules • Settings                                      │
└──────────────────────────────────────────────────────────────────────────────┘
Sessions: 0 (0 active)  │  Tokens: 0 in/0 out  │  Cost: $0.00  │  Cmds: 0
░░░░░░░░░░ 0% allow  ░░░░░░░░░░ 0% deny  ░░░░░░░░░░ 0% prompt  │  Risk L:0 M:0
┌ Sessions (0) ────────────────────────────────────────────────────────────────┐
│Status     ID         Started ▼      Duration     Msgs    Cmds    Tokens     P│
│                                                                              │
│No session                                                                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 <TIME> | Refresh <N>s | Sessions: 0 | Commands: 0 | ERROR: db locked | q:quit T
