crates/clx/src/dashboard/ui/snapshots/clx__dashboard__ui__tests__wave1_pixel__h2_status_reload_confirm_hints.snap
---
source: crates/clx/src/dashboard/ui/mod.rs
expression: rendered
---
┌ CLX Dashboard ───────────────────────────────────────────────────────────────┐
│ Sessions • Audit Log • Rules • Settings                                      │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Sections ──────────┐┌ Fields ────────────────────────────────────────────────┐
│> Validator         ││                                                        │
│  Context           ││                                                        │
│  LLM               ││                                                        │
│  User Learning     ││                                                        │
│  Logging           ││                                                        │
│  Ctx Pressure      ││                                                        │
│  Sess Recovery┌ Reload from Disk ────────────────────────────┐               │
│  MCP Tools    │Unsaved changes will be lost. Reload?         │               │
│  Auto Recall  │                                              │               │
│               │[y] Yes   [n/Esc] No                          │               │
│               └──────────────────────────────────────────────┘               │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
└────────────────────┘└────────────────────────────────────────────────────────┘
 <TIME> | Refresh <N>s | Sessions: 0 | Commands: 0 | Reload from disk? [y] Yes
