crates/clx/src/dashboard/ui/snapshots/clx__dashboard__ui__tests__wave1_pixel__h2_status_settings_nav_dirty.snap
---
source: crates/clx/src/dashboard/ui/mod.rs
expression: rendered
---
┌ CLX Dashboard ───────────────────────────────────────────────────────────────┐
│ Sessions • Audit Log • Rules • Settings *                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Sections ──────────┐┌ Fields ────────────────────────────────────────────────┐
│> Validator         ││                                                        │
│  Context           ││                                                        │
│  LLM               ││                                                        │
│  User Learning     ││                                                        │
│  Logging           ││                                                        │
│  Ctx Pressure      ││                                                        │
│  Sess Recovery     ││                                                        │
│  MCP Tools         ││                                                        │
│  Auto Recall       ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
│                    ││                                                        │
└────────────────────┘└────────────────────────────────────────────────────────┘
 <TIME> | Refresh <N>s | Sessions: 0 | Commands: 0 | h/l:section j/k:field Space
