crates/clx/src/dashboard/ui/snapshots/clx__dashboard__ui__tests__wave1_pixel__h2_tabbar_settings_dirty_star.snap
---
source: crates/clx/src/dashboard/ui/mod.rs
expression: rendered
---
┌ CLX Dashboard ───────────────────────────────────────────────────────────────┐
│ Sessions • Audit Log • Rules • Settings *                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Audit Log (0) ───────────────────────────────────────────────────────────────┐
│Time ▼      Decision     Risk     Layer      Command              Session     │
│                                                                              │
│No audit en                                                                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Detail ──────────────────────────────────────────────────────────────────────┐
│Select a row to view details                                                  │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 <TIME> | Refresh <N>s | Sessions: 0 | Commands: 0 | q:quit Tab:switch /:filter
